<resources>
    <string name="config_json">config.json</string>
    <string name="app_name">EpiAndroid</string>
    <string name="action_settings">Parameters</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Connection</string>
    <string name="check_box_login">Remember me</string>
    <string name="module_title">Modules</string>
    <string name="home_activity">Home</string>
    <string name="registration">Register</string>
    <string name="administration">Administration</string>
    <string name="welcome">Welcome to the Administration</string>
    <string name="marks">Analysis of module or activity</string>
    <string name="pedagogy">Pedagogy</string>
    <string name="divers">Miscellaneous</string>
    <string name="planning">Annual schedule</string>
    <string name="documents">Public Documents</string>
    <string name="autolink">Generate autologin link</string>
    <string name="users_params">User settings</string>
    <string name="professors_doc">Teacher documentation</string>
    <string name="message_activity">Message</string>
    <string name="trombi_activity">Yearbook</string>
    <string name="ville">City :&#160;</string>
    <string name="annee">Year :&#160;</string>
    <string name="planning_time_format">yyyy-MM-dd</string>
    <string name="title">Title :&#160;</string>
    <string name="comment">Comments :&#160;</string>
    <string name="space">&#160;</string>
    <string name="slash">/</string>
    <string name="note">Marks :&#160;</string>
    <string name="credits">Credits :&#160;</string>
    <string name="uid_gid">Uid / Gid :&#160;</string>
    <string name="city">City :&#160;</string>
    <string name="member">Member of :&#160;</string>
    <string name="date">Date :&#160;</string>
    <string name="corrector">Corrector :&#160;</string>
    <string name="telephone">Telephone :&#160;</string>
    <string name="birthday">Birthday :&#160;</string>
    <string name="email">Email :&#160;</string>
    <string name="facebook">Facebook :&#160;</string>
    <string name="module">Module :&#160;</string>
    <string name="cycle">Cycle :&#160;</string>
    <string name="semester">Semester :&#160;</string>
    <string name="description">Description :&#160;</string>
    <string name="slot">Slots :&#160;</string>
    <string name="login">Login :&#160;</string>
    <string name="acquis">Acquis</string>
    <string name="echec">Echec</string>
    <string name="_acquis">V</string>
    <string name="_echec">X</string>
    <string name="registration_until">Registration until</string>
    <string name="status">Status :&#160;</string>
    <string name="enter_token">Enter Token :&#160;</string>
    <string name="token_hint">token</string>
    <string name="confirm">ok</string>
    <string name="token_title">Token</string>
    <string name="activity_instance">Activity Instance</string>
    <string name="tab_index">tab index</string>
    <string name="dialog_callback">sendToken</string>
    <string name="positive">OK</string>
    <string name="quit">Cancel</string>
    <string name="seperate_date">-</string>
    <string name="max_students">Max Students :&#160;</string>
    <string name="type_title">Type :&#160;</string>
    <string name="register">Register</string>
    <string name="unregister">Unregister</string>
    <string name="more_messages">See messages</string>
    <string name="notregistered">notregistered</string>
    <string name="alreadyregistered">ongoing</string>
    <string name="registered">registered</string>
    <string name="registered_module">Registered on module</string>
    <string name="not_registered_module">Not registered on module</string>
    <string name="gpa">GPA :&#160;</string>
    <string name="spices">Spices :&#160;</string>
    <string name="active">Active:</string>
    <string name="idle">Idle :&#160;</string>
    <string name="out_active">Out Active :&#160;</string>
    <string name="out_idle">Out Idle :&#160;</string>
    <string name="trombi">Yearbook</string>
    <string name="time_format">HH:mm:ss</string>
    <string name="in">&#160;in less than&#160;</string>
    <string name="tenmin">10 minutes</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="call">tel:&#160;</string>
    <string name="android_gmail">com.google.android.gm</string>
    <string name="android_gmail_composed">com.google.android.gm.ComposeActivityGmail</string>
    <string name="mail_subject">Hello world !</string>
    <string name="mail_text">Just a simple text...</string>
    <string name="plain_text">plain/text</string>
    <string name="login_check_pref">login_check</string>
    <string name="login_pref">login</string>
    <string name="password_pref">password</string>
    <string name="token_pref">token</string>
    <string name="login_activity_pref">LoginPreference</string>
    <string name="serial_info">Info</string>
    <string name="null_str">null</string>
    <string name="promo_spinner">Promo</string>
    <string name="course_spinner">Course</string>
    <string name="location_spinner">Location</string>
    <string-array name="location">
        <item>FR/BDX</item>
        <item>FR/LIL</item>
        <item>FR/LYN</item>
        <item>FR/MAR</item>
        <item>FR/MPL</item>
        <item>FR/NCY</item>
        <item>FR/NAN</item>
        <item>FR/NCE</item>
        <item>FR/PAR</item>
        <item>FR/REN</item>
        <item>FR/STG</item>
        <item>FR/TLS</item>
    </string-array>
    <string-array name="course">
        <item>bachelor/classic</item>
        <item>bachelor/tek1ed</item>
        <item>bachelor/tek2ed</item>
    </string-array>
    <string-array name="promo">
        <item>tek1</item>
        <item>tek2</item>
        <item>tek3</item>
        <item>tek4</item>
        <item>tek5</item>
    </string-array>
</resources>
