<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:id="@+id/profile_layout"
                android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent"
                    android:background="#303030"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_view">

        <ImageView android:layout_width="80dp"
                   android:layout_marginLeft="10dp"
                   android:layout_marginTop="10dp"
                   android:id="@+id/profile_image"
                   android:src="@drawable/unknow_user"
                   android:layout_height="110dp"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/login"
                  android:id="@+id/profile_login"
                  android:layout_marginLeft="100dp"
                  android:layout_marginTop="10dp"
                  android:textColor="#F0F0F0"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_alignParentRight="true"
                  android:text="@string/gpa"
                  android:id="@+id/profile_gpa"
                  android:layout_marginTop="10dp"
                  android:layout_marginRight="20dp"
                  android:textColor="#F0F0F0"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_alignParentRight="true"
                  android:text="@string/credits"
                  android:id="@+id/profile_credits"
                  android:layout_marginTop="10dp"
                  android:layout_marginRight="20dp"
                  android:layout_below="@id/profile_gpa"
                  android:textColor="#F0F0F0"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_alignParentRight="true"
                  android:text="@string/spices"
                  android:id="@+id/profile_spices"
                  android:layout_marginTop="10dp"
                  android:layout_marginRight="20dp"
                  android:layout_below="@id/profile_credits"
                  android:textColor="#F0F0F0"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/uid_gid"
                  android:id="@+id/profile_id"
                  android:layout_below="@id/profile_login"
                  android:layout_marginLeft="100dp"
                  android:layout_marginTop="10dp"
                  android:textColor="#F0F0F0"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/city"
                  android:id="@+id/profile_city"
                  android:layout_below="@id/profile_id"
                  android:layout_marginLeft="100dp"
                  android:layout_marginTop="10dp"
                  android:textColor="#F0F0F0"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/member"
                  android:id="@+id/profile_groups"
                  android:layout_below="@id/profile_city"
                  android:layout_marginLeft="100dp"
                  android:layout_marginTop="10dp"
                  android:singleLine="true"
                  android:textColor="#F0F0F0"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/active"
                  android:layout_marginTop="10dp"
                  android:id="@+id/profile_active"
                  android:layout_below="@id/profile_image"
                  android:layout_marginLeft="10dp"
                  android:singleLine="true"
                  android:textColor="#F0F0F0"
                  android:layout_marginBottom="5dp"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/idle"
                  android:layout_marginTop="10dp"
                  android:id="@+id/profile_idle"
                  android:layout_below="@id/profile_image"
                  android:layout_toRightOf="@+id/profile_active"
                  android:layout_marginLeft="10dp"
                  android:singleLine="true"
                  android:textColor="#F0F0F0"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/out_active"
                  android:layout_marginTop="10dp"
                  android:id="@+id/profile_out_active"
                  android:layout_below="@id/profile_image"
                  android:layout_toRightOf="@+id/profile_idle"
                  android:layout_marginLeft="10dp"
                  android:singleLine="true"
                  android:textColor="#F0F0F0"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/out_idle"
                  android:layout_marginTop="10dp"
                  android:id="@+id/profile_out_idle"
                  android:layout_below="@id/profile_image"
                  android:layout_toRightOf="@+id/profile_out_active"
                  android:layout_marginLeft="10dp"
                  android:singleLine="true"
                  android:textColor="#F0F0F0"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_below="@id/profile_active"
                  android:id="@+id/profile_messages"
                  android:layout_marginTop="10dp"
                  android:layout_marginLeft="50dp"
                  android:textColor="#0000E0"
                  android:clickable="true"
                  android:singleLine="true"
                  android:onClick="onClick"
                  android:visibility="gone"
                  android:text="@string/more_messages"
                  android:layout_marginBottom="10dp"
                  android:layout_height="wrap_content"
                  android:layout_alignParentLeft="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_active"
                android:id="@+id/trombi"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:textColor="#0000E0"
                android:clickable="true"
                android:onClick="onClick"
                android:visibility="gone"
                android:text="@string/trombi"
                android:layout_marginBottom="10dp"
                android:layout_alignParentRight="true"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/telephone"
                  android:clickable="true"
                  android:onClick="onClick"
                  android:layout_marginTop="10dp"
                  android:id="@+id/profile_telephone"
                  android:layout_below="@id/profile_messages"
                  android:layout_marginLeft="10dp"
                  android:visibility="gone"
                  android:singleLine="true"
                  android:textColor="#F0F0F0"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/birthday"
                  android:id="@+id/profile_birthday"
                  android:layout_marginTop="10dp"
                  android:layout_toRightOf="@id/profile_telephone"
                  android:layout_below="@+id/trombi"
                  android:layout_marginRight="5dp"
                  android:layout_marginLeft="10dp"
                  android:singleLine="true"
                  android:visibility="gone"
                  android:textColor="#F0F0F0"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/email"
                  android:clickable="true"
                  android:onClick="onClick"
                  android:id="@+id/profile_email"
                  android:layout_marginTop="10dp"
                  android:visibility="gone"
                  android:layout_below="@id/profile_telephone"
                  android:layout_marginLeft="10dp"
                  android:singleLine="true"
                  android:textColor="#F0F0F0"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/facebook"
                  android:clickable="true"
                  android:onClick="onClick"
                  android:id="@+id/profile_facebook"
                  android:visibility="gone"
                  android:layout_marginTop="10dp"
                  android:singleLine="true"
                  android:layout_below="@id/profile_email"
                  android:layout_marginLeft="10dp"
                  android:layout_marginBottom="5dp"
                  android:textColor="#F0F0F0"
                  android:layout_height="wrap_content"/>

    </RelativeLayout>
    <ExpandableListView android:layout_width="wrap_content"
                        android:id="@+id/profile_mark_list"
                        android:layout_below="@id/profile_view"
                        android:layout_height="wrap_content"/>
</RelativeLayout>
