<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
                  android:background="#4f4f4f"
                  android:orientation="vertical"
                  android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
                  android:layout_marginTop="5dp"
                  android:id="@+id/grade_item_title"
                  android:text="@string/title"
                  android:textStyle="bold"
                  android:layout_marginLeft="5dp"
                  android:textSize="15sp"
                  android:textColor="#F0F0F0"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:id="@+id/grade_item_corrector"
                  android:text="@string/corrector"
                  android:textStyle="bold"
                  android:layout_marginTop="5dp"
                  android:layout_marginLeft="5dp"
                  android:textSize="15sp"
                  android:textColor="#F0F0F0"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:id="@+id/grade_item_date"
                  android:text="@string/date"
                  android:textStyle="bold"
                  android:layout_marginLeft="5dp"
                  android:layout_marginTop="5dp"
                  android:textSize="15sp"
                  android:layout_marginBottom="5dp"
                  android:textColor="#F0F0F0"
                  android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:background="#5F5F5F"
                  android:orientation="vertical"
                  android:layout_height="wrap_content">

        <TextView android:layout_width="wrap_content"
                  android:id="@+id/grade_item_comment"
                  android:text="@string/comment"
                  android:textStyle="bold"
                  android:layout_marginTop="5dp"
                  android:layout_marginLeft="5dp"
                  android:textSize="15sp"
                  android:textColor="#F0F0F0"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:id="@+id/grade_item_note"
                  android:text="@string/note"
                  android:textStyle="bold"
                  android:layout_marginLeft="5dp"
                  android:layout_marginTop="5dp"
                  android:textSize="15sp"
                  android:textColor="#F0F0F0"
                  android:layout_marginBottom="5dp"
                  android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>