<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:id="@+id/login_view"
                android:background="@drawable/login"
                tools:context=".MainActivityFragment">

    <Gallery android:id="@+id/gallery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_above="@+id/login_textfield"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              android:hint="@string/login_hint"
              android:id="@+id/login_textfield"
              android:textStyle="bold"
              android:gravity="center"
              android:layout_centerVertical="true" android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPassword"
              android:hint="@string/password_hint"
              android:id="@+id/password_textfield"
              android:textStyle="bold" android:gravity="center"
              android:layout_below="@+id/login_textfield" android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/sign_in_button"
            android:layout_alignParentBottom="true" android:layout_alignLeft="@+id/check_box"
            android:layout_alignStart="@+id/check_box" android:layout_marginBottom="36dp"
            android:layout_alignRight="@+id/check_box" android:layout_alignEnd="@+id/check_box"/>

    <ProgressBar android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:visibility="invisible"
                 android:id="@+id/progress_bar"
                 android:layout_centerHorizontal="true"/>

    <CheckBox android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/check_box"
              android:text="@string/check_box_login"
              android:layout_marginBottom="41dp"
              android:layout_above="@+id/sign_in_button" android:layout_centerHorizontal="true"/>

</RelativeLayout>
